# atreus

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Mapviz Setup.docx  README.md  clone_repos.sh  mapviz_install.sh  package.xml  pause_gazebo_models.sh  pull_request_template.md  requirements.in  requirements.txt  traffic_light_dep_fix.sh
config/gzsatellite/: gzsatellite_params.yaml
config/localization/: ekf_localization_global_frame_params.yaml  ekf_localization_local_frame_params.yaml  navsat_transform_params.yaml  ukf_localization_global_frame_params.yaml  ukf_localization_local_frame_params.yaml
config/mapviz/: custom_global_planner.config  general.config  localization.config
config/move_base/: move_base.yaml
config/rviz/: default_setup.rviz  mapping.rviz  move_base.rviz  navigation.rviz  urdf.rviz
config/stereo/: stereo.yaml
launch/: README.md  amcl.launch  ar_front.launch  ar_right.launch  depth_proc.launch  gmapping.launch  localization.launch  main.launch.py  map_server.launch  mapviz.launch  move_base.launch  rtabmap.launch  rviz.launch  slam_rviz.launch  start_stereovision.launch  xacro.launch
launch/description/: rviz.launch.py  spawn_robot.launch.py
launch/navigation/: amcl.launch.py  behavior_server.launch.py  bt_navigator.launch.py  controller_server.launch.py  map_saver.launch.py  map_server.launch.py  navigation.launch.py  planner_server.launch.py  recoveries_server.launch.py  slam_toolbox.launch.py  velocity_smoother.launch.py  waypoint_follower.launch.py
meshes/realsense/: realsense.STL
models/Ditch/: model.config  model.sdf
models/Green_Traffic_Light/: model.config  model.sdf
models/Official_Tennis_Ball/: model.config  model.sdf
models/Ramp/: model.config  model.sdf
models/Red_Traffic_Light/: model.config  model.sdf
models/Yellow_Traffic_Light/: model.config  model.sdf
models/artag0/: model.config  model.sdf
models/artag1/: model.config  model.sdf
models/artag10/: model.config  model.sdf
models/artag2/: model.config  model.sdf
models/artag3/: model.config  model.sdf
models/artag4/: model.config  model.sdf
models/artag5/: model.config  model.sdf
models/artag6/: model.config  model.sdf
models/artag7/: model.config  model.sdf
models/artag8/: model.config  model.sdf
models/artag9/: model.config  model.sdf
models/curiosity_path/: model.config  model.sdf
models/free_rectangle/: model.config  model.sdf
models/holder0/: model.config  model.sdf
models/holder1/: model.config  model.sdf
models/holder10/: model.config  model.sdf
models/holder2/: model.config  model.sdf
models/holder3/: model.config  model.sdf
models/holder4/: model.config  model.sdf
models/holder5/: model.config  model.sdf
models/holder6/: model.config  model.sdf
models/holder7/: model.config  model.sdf
models/holder8/: model.config  model.sdf
models/holder9/: model.config  (+1 more)
scripts/: README.md  key_drive.py
src/: cloudy.cpp
srv/: Path.srv
urdf/: README.md  atreus.gazebo  atreus.gazebo.xacro  atreus.xacro  macros.xacro  materials.xacro
worlds/: README.md  ar.world  free_rectangle.world  obstacles.world  satellite.world  square_frame.world
(+104 files in other folders)
